# omf

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  README.rst  meta.yaml  pixi.toml  pylintrc  pyproject.toml  recipe.yaml
.github/workflows/: issue_to_jira.yml  pr_add_jira_summary.yml  pytest-unix-os.yml  pytest-windows.yml  python_analysis.yml  python_deploy_dev.yml  python_deploy_prod.yml  static-analysis.yml
devtools/: check-copyright.py  git_message_hook.py
docs/: Makefile  conf.py  index.rst  test_docs.py
omf/: __init__.py  base.py  data.py  serializers.py
omf/fileio/: fileio.py  geoh5.py  utils.py
omf/scripts/: __init__.py  geoh5_to_omf.py  omf_to_geoh5.py
tests/: conftest.py  convert_curve_test.py  convert_grid2d_test.py  convert_pointset_test.py  convert_project_test.py  convert_surface_test.py  convert_volume_test.py  doc_example_test.py  leapfrog_load_test.py  script_geoh5_to_omf_test.py  script_omf_to_geoh5_test.py  version_test.py
