[build-system]
requires = [
  "poetry-core>=1.8.0",
  "poetry-dynamic-versioning>=1.9.1,<2.0",
  # list dependencies to work with PIP_NO_DEPS=1
  "MarkupSafe>=2.0",
  "dunamai>=1.25,<2.0",
  "jinja2>=3.0,<4.0",
  "packaging>=24.0",
  "tomlkit>=0.13",
]
build-backend = "poetry_dynamic_versioning.backend"

[project]
name = "mira-omf"
requires-python = ">=3.9,<4.0"

description = "API Library for Open Mining Format"
license = "MIT"
keywords = [
  "earth-sciences",
  "geoh5",
  "geology",
  "geophysics", 
  "interoperability",
  "omf",
  "open-mining-format",
]
readme = "README.rst"
dynamic = ["version", "classifiers"]
authors = [
    { name = "Mira Geoscience", email = "support@mirageoscience.com" },
    { name = "Global Mining Guidelines Group", email = "info@gmggroup.org" }
]
maintainers = [{ name = "Dominique Fournier", email = "dominiquef@mirageoscience.com" }]

dependencies = [
  "geoh5py >= 0.12.0a1, == 0.12.*",
  "numpy == 1.26.*",
  "properties == 0.6.*",
  "pypng == 0.20220715.*",
  "six >= 1.16.0, == 1.*",
  "vectormath == 0.2.*",
]

[project.urls]
repository = "https://github.com/MiraGeoscience/omf"
homepage = "https://www.mirageoscience.com/mining-industry-software/python-integration/"
#documentation  = "https://mirageoscience-omf.readthedocs-hosted.com/"

[project.scripts]
geoh5_to_omf = 'omf.scripts.geoh5_to_omf:main'
omf_to_geoh5 = 'omf.scripts.omf_to_geoh5:main'

[tool.poetry]
requires-poetry = '>=2.0,<3.0'

packages = [
    { include = "omf" },
]

include = [
    { path = "COPYING" },
    { path = "COPYING.LESSER" },
    { path = "LICENSE" },
    { path = "README.rst" },
    { path = "THIRD_PARTY_SOFTWARE.rst" },
    { path = "docs/**/THIRD_PARTY_SOFTWARE.rst" },
]

classifiers = [
    'Development Status :: 4 - Beta',
    'Natural Language :: English',
    'Operating System :: MacOS',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Operating System :: Unix',
    'Topic :: Scientific/Engineering :: Mathematics',
    'Topic :: Scientific/Engineering :: Physics',
    'Topic :: Scientific/Engineering',
    "Topic :: Software Development :: Libraries :: Python Modules",
]
version = "0.0.0.dev0"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.9.1,<2.0.0", extras = ["plugin"] }

[tool.poetry-dynamic-versioning]
bump = true
enable = true
fix-shallow-repository = true
strict = true
style = "pep440"
vcs = "git"

[tool.poetry-dynamic-versioning.substitution]
files = ["omf/_version.py", "recipe.yaml"]
patterns = [
    { value = '''(^__version__\s*(?::.*?)?=\s*['"])[^'"]*(['"])''', mode = "str" },
    { value = '''(^\s*version\s*(?::.*?)?:\s*['"])[^'"]*(['"])''', mode = "str" },
]

[tool.poetry-dynamic-versioning.files."omf/_version.py"]
persistent-substitution = true
initial-content = """
  # Version placeholder that will be replaced during substitution
  __version__ = "0.0.0"
"""

[tool.poetry-dynamic-versioning.files."recipe.yaml"]
persistent-substitution = true

[tool.pixi.project]
channels = ["https://repo.prefix.dev/conda-forge"]
platforms = ["win-64", "linux-64"]

[tool.pixi.dependencies]
# for pixi to resolve dependencies from conda
## direct dependencies:
#----------------------
numpy = "1.26.*"
properties = "0.6.*"
pypng = "0.20220715.*"
six = ">=1.16.0, 1.*"
vectormath = "0.2.*"

## indirect dependencies from remaining pip packages:
#----------------------------------------------------
h5py = ">=3.2.1, 3.*"
pillow = "10.3.*"
pydantic = ">=2.7, 2.*"

[tool.pixi.pypi-dependencies]
mira-omf = {path = ".", editable = true}

[tool.pixi.environments]
#prod-py310 = {features = ["py310", "mirageo"], solve-group = "prod-py310"}
#prod-py311 = {features = ["py311", "mirageo"], solve-group = "prod-py311"}
#prod-py312 = {features = ["py312", "mirageo"], solve-group = "prod-py312"}
#test-prod-py310 = {features = ["py310", "mirageo", "test"], solve-group = "prod-py310"}
#test-prod-py311 = {features = ["py311", "mirageo", "test"], solve-group = "prod-py311"}
#test-prod-py312 = {features = ["py312", "mirageo", "test"], solve-group = "prod-py312"}

py310 = {features = ["py310", "mirageo-git", "test"], solve-group = "default"}
py311 = {features = ["py311", "mirageo-git", "test"]}
py312 = {features = ["py312", "mirageo-git", "test"]}

default = {features = ["py310", "mirageo-git", "test", "dev"], solve-group = "default"}
docs = {features = ["py310", "mirageo-git", "doc"], solve-group = "doc"}
test-docs = {features = ["py310", "mirageo-git", "test", "doc"], solve-group = "doc"}

[tool.pixi.feature.py310.dependencies]
python = "3.10.*"

[tool.pixi.feature.py311.dependencies]
python = "3.11.*"

[tool.pixi.feature.py312.dependencies]
python = "3.12.*"

#[tool.pixi.feature.mirageo.dependencies]
#geoh5py = ">=0.12.0a1, 0.12.*"

[tool.pixi.feature.mirageo-git.pypi-dependencies]
geoh5py = { git = "https://github.com/MiraGeoscience/geoh5py.git", rev = "develop" }

[tool.pixi.feature.dev.dependencies]
Pygments = '*'

[tool.pixi.feature.test.dependencies]
packaging = "*"
pylint = "*"
pytest = "*"
pytest-cov = "*"
pyyaml = "*"

[tool.pixi.feature.test.tasks]
test = "pytest tests --cov --cov-report=xml"
_pytest-docs = "pytest docs"

[tool.pixi.feature.test.tasks.test-local]
args = [{ arg = "packages", default = "geoh5py" }]
depends-on = [
    {task = "use-local-deps", args = [ "{{ packages }}" ]},
    {task = "show-pip-source", args =  [ "{{ packages }}" ]},
    {task = "test"}
]

[tool.pixi.feature.doc.dependencies]
sphinx = ">=5.3, 5.*"

[tool.pixi.feature.doc.tasks]
build-docs = "sphinx-build -nW -b html docs docs/_build"
linkcheck-docs = "sphinx-build -nW -b linkcheck docs docs/_build"

[tool.pixi.tasks.test-pyvers]
depends-on = [
    {task = "test", environment = "py310"},
    {task = "test", environment = "py311"},
    {task = "test", environment = "py312"},
]

[tool.pixi.tasks.test-docs]
depends-on = [{task = "_pytest-docs", environment = "test-docs"}]

[tool.pixi.tasks.show-pip-source]
args = [{ arg = "packages", "default" = "geoh5py" }]
cmd = "uv pip show {{packages}}"

[tool.pixi.tasks.use-local-deps]
args = [{ arg = "packages", default = "geoh5py" }]
cmd = """
uv pip install --no-deps --force-reinstall \
{% for package in packages | split %} -e ../{{ package | trim }}{% endfor %}
"""

[tool.ruff]
target-version = "py310"

exclude = [
    "docs/*",
    # skip source files from upstream repo
    "omf/fileio/fileio.py",
    "omf/fileio/utils.py",
    "omf/base.py",
    "omf/data.py",
    "omf/lineset.py",
    "omf/pointset.py",
    "omf/serializers.py",
    "omf/surface.py",
    "omf/texture.py",
    "omf/volume.py",
]

[tool.ruff.lint]
ignore = [
    "B028",  # no-explicit-stacklevel for warnings.warn()
    "E501",  # line-too-long - code is reformatted (do not care about comments and docstring)
    "F401",  # unsused-import - covered by pycln
    "RUF005",  # collection-literal-concatenation - wrong suggestion with numpy arrays
    "RUF012", # TODO
]

select = [
    "A",  # flake8-builtins
    "B",  # flake8-bugbear
    "B006",  # Do not use mutable data structures for argument defaults
    "B9",  # flake8-bugbear opiniated warnings
    "BLE",  # flake8-blind-except
    "C4",  # flake8-comprehensions
    "C9",  # mccabe
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "RUF",  # ruff rules
    "TID", # flake8-tidy-imports
    "UP",  # pyupgrade
    "W",  # pycodestyle warnings
]

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.format]
# default formatting is just fine

[tool.mypy]
warn_unused_configs = true
ignore_missing_imports = true
scripts_are_modules = true
show_error_context = true
show_column_numbers = true
check_untyped_defs = true

plugins = [
#    "numpy.typing.mypy_plugin"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["mira_omf"]

[tool.coverage.report]
exclude_lines = [
    "raise NotImplementedError",
    "pass",
    "if TYPE_CHECKING",
    "pragma: no cover"
]

fail_under = 80

[tool.coverage.html]
skip_empty = true
skip_covered = true
